assets/styles/_layout.scss
@import "node_modules/skeleton-css/css/skeleton";
@import "node_modules/compass-mixins/lib/compass/css3/flexbox";
@import "media_queries";

body > header, article, main, footer {
  @extend .container;
}

body > header {
  @include display-flex;
  @include flex-direction(column);
  @include flex-wrap(nowrap);
  @include justify-content(space-between);
  @include align-items(flex-start);
  padding-top: 0.5em;
}

body > header > .title {
  @include align-self(center);
}

body > header > nav {
  @include align-self(flex-end);
}

@media ($medium) {
  body > header > nav {
    display: none;
  }
}

.stat-block {
  position: relative;
}

.stat-block img.background {
  width: 100%;
  z-index: -1;
  position: relative;
}

.stat-block dnd-stat-block {
  position: absolute;
  top: 0;
  right: 0;
}

@media ($medium) {

  .stat-block {
    position: static;
  }

  .stat-block img.background {
    display: none;
  }

  .stat-block dnd-stat-block {
    position: static;
  }

}

article {
  margin: 0;
  width: 100%;
}

article header {
  margin: 0;
}

#playtest {
  margin-bottom: 1em;
}

#playtest .content {
  padding-top: 1em;
  @extend .container;
}

table td.number, th.number {
  padding-left: 1em;
  padding-right: 1em;
  text-align: center;
}

